# twstr-rdv

./: .gitignore  README.md  credentials.json.sample  firebase_main.py  init.sh  main.py  pushover.py  pyproject.toml  run.sh  status.json  status.py  subscribers_handler.py  super.py  telegram_bot.py  telegram_main.py  test.py  test_main.py  twstr_parser.py  twstr_rdv.py
examples/: conversationbot  conversationbot.py  deeplinking.py  inlinebot.py  inlinekeyboard2.py  nestedconversationbot.py  persistentconversationbot.py
linux/: stop.sh
para/: __init__.py  flights.py  flightsEvents.py  locations.py  pilots.py
service/: start.sh  status.sh  twstr.service
services/: __init__.py  firebase_db.py  healthchecks.py  pushover.py  telegram_bot.py
twstr/: __init__.py  status.py  subscribers_handler.py
